--- a/tp1/index.html
+++ b/tp1/index.html
@@ -12,22 +12,132 @@
 
         <style>
           body{
-              background-color: #e9ebee;              
+              background-color: #e9ebee;
               font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
               font-size: 16px;
               margin: 0 auto;
-              max-width: 800px;              
+              max-width: 800px;
+          }
+
+          table{
+            width:100%;
+            border: 1px solid black;
+          }
+
+          td{
+            border: 1px solid black;
+          }
+
+          h1{
+            text-align: center;
+            color: pink;
+            background-color: red;
           }
         </style>
-        
+
         <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
         <!--<link rel="stylesheet" href="style.css">-->
         <!--<script src="main.js"></script>-->
     </head>
-    <body>        
-        <h1>TP1</h1>
+    <body>
+        <h1>TP1 ll</h1>
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
         <img src="../galilee.png" alt="Logo Galilee"/>
+
+<h1>CURRICULUM VITAE</h1>
+        <table>
+         <tr>
+           <td>OURAMDANE</td>
+           <td>Lydia</td>
+           <td>24ans</td>
+         </tr>
+         <tr>
+           <td>5 Alée des marronniers pierrefitte sur seine</td>
+           <td>etudiante</td>
+           <td>marée</td>
+         </tr>
+         <tr>
+           <td>0663455152</td>
+           <td>ouremdanlydia@gmail.com</td>
+           <td>permetB</td>
+         </tr>
+        </table>
+
+        <h1>Ingenieur d'étude et développement</h1>
+        <h1 class=froma>Formations</h1>
+
+        <table>
+         <tr>
+           <td>2017</td>
+           <td>Master 2 ingenerie en innovation en images et reseaux(en cour) a l'université paris13</td>
+
+         </tr>
+
+         <tr>
+           <td>2015</td>
+           <td>Licence en télécommunication et réseaux (USTHB)</td>
+        </tr>
+        <tr>
+          <td>2012</td>
+          <td>BAC Série Science Expérimental</td>
+       </tr>
+       <tr>
+         <td>2011</td>
+         <td>BAC Série Science Expérimental</td>
+      </tr>
+        </table>
+        <h1 class=froma>Compétences</h1>
+        <table>
+         <tr>
+           <td>Développement</td>
+           <td>HTML,matlab,c++,java</td>
+
+         </tr>
+
+         <tr>
+           <td>Réseaux</td>
+           <td>LAN,WIFI</td>
+        </tr>
+        <tr>
+          <td>Langues</td>
+          <td>Anglais ,bilingue,FranÇais,Arab,langue maternnelle(kabyle)</td>
+       </tr>
+       <tr>
+         <td>bureutique</td>
+         <td>pack office (word,excel,PowerPoint...)</td>
+       </tr>
+        </table>
+  <h1 class=froma>Expériences</h1>
+  <table>
+  <tr>
+    <td>2015</td>
+    <td>Réalisation mémoir(Réalisation d'un lecture carte a puce) </td>
+
+  </tr>
+    </table>
+
+    <h1 class=froma>Centre d'étude</h1>
+    <table>
+    <tr>
+      <td>Sport</td>
+      <td>Step,Volley-ball </td>
+
+    </tr>
+
+
+    <tr>
+      <td>Culture</td>
+      <td>Cinéma,Lecture</td>
+
+    </tr>
+    <tr>
+      <td>Divers</td>
+      <td>Sérieuse,Dynamique,Motivée et Ponctuelle,Sens de communication</td>
+
+    </tr>
+
+
+      </table>
     </body>
 </html>
